--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port = 8081
+
+eureka.instance.instance-id=${spring.application.name}:${random.value}
+spring.application.name=notification-service
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.default-zone=${EUREKA_URI:http://localhost:8761/eureka}
+spring.profiles.active=default
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=barisseckin0@gmail.com
+spring.mail.password=phuvldkjvstqqkxq
